# AgentCohort

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  pyproject.toml
config/: config.yml
docs/: quickstart.md  reference.md
scripts/: README.md  generate_docs.py
src/agentcohort/: __init__.py  __main__.py  config.py  logger.py  main.py  task_cli.py
src/agentcohort/cli/: main.py  task.py  worktree.py
src/agentcohort/task/: __init__.py  exceptions.py  id_generator.py  models.py  repository.py  services.py  utils.py
src/agentcohort/worktree/: __init__.py  exceptions.py  git.py  models.py  services.py
