[project]
name = "agentcohort"
version = "0.1.2"
description = "Task Tracker, Memory and Orchestration System for AI agents."
readme = "README.md"
authors = [
    { name = "Anchit Bajaj", email = "ab@abifog.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.3",
    "typer>=0.21.1",
]

[project.scripts]
agentcohort = "agentcohort.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
extend-select = [
    "F",
    "W",
    "E",
    "I",
    "UP",
    "C4",
    "FA",
    "ISC",
    "ICN",
    "RET",
    "SIM",
    "TID",
    "TC",
    "PTH",
    "TD",
    "NPY",
]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.pyright]
typeCheckingMode = "strict"

[dependency-groups]
dev = [
    "basedpyright",
    "ruff",
]
